force-app/main/default/objects/Contract/fields/Account_Client_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Client_Billing_Address__c</fullName>
    <label>Account/Client Billing Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>