force-app/main/default/objects/Contract/fields/Account_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Client_Name__c</fullName>
    <label>Account/Client Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>