force-app/main/default/objects/Contract/fields/Account_Client_PO__c.field-meta.xml
<CustomField>
    <fullName>Account_Client_PO__c</fullName>
    <label>Account/Client PO#</label>
    <length>200</length>
    <type>Text</type>
</CustomField>