force-app/main/default/objects/Contract/fields/Adfire_Address__c.field-meta.xml
<CustomField>
    <fullName>Adfire_Address__c</fullName>
    <label>Adfire Address</label>
    <type>TextArea</type>
</CustomField>