force-app/main/default/objects/Contract/fields/Adfire_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Adfire_Company_Name__c</fullName>
    <label>Adfire Company Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>