force-app/main/default/objects/Contract/fields/Adfire_IO_ID__c.field-meta.xml
<CustomField>
    <fullName>Adfire_IO_ID__c</fullName>
    <label>Adfire IO ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>