force-app/main/default/objects/Contract/fields/Adfire_website__c.field-meta.xml
<CustomField>
    <fullName>Adfire_website__c</fullName>
    <label>Adfire website</label>
    <type>Url</type>
</CustomField>