force-app/main/default/objects/Contract/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <formula>Opportunity__r.Account.Name + &apos;-&apos; +  Opportunity__r.SubClient_or_Manufacturer__r.Name + &apos;-&apos; +  Opportunity__r.Name + &apos;-&apos; +  TEXT( Opportunity__r.Audience_Type__c )</formula>
    <label>Campaign Name</label>
    <type>Text</type>
</CustomField>