force-app/main/default/objects/Contract/fields/Flight__c.field-meta.xml
<CustomField>
    <fullName>Flight__c</fullName>
    <formula>TEXT(MONTH( StartDate )) + &apos;/&apos; + TEXT(YEAR( StartDate )) + &apos; - &apos; +
TEXT(MONTH(  EndDate )) + &apos;/&apos; + TEXT(YEAR( EndDate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight</label>
    <type>Text</type>
</CustomField>