force-app/main/default/objects/Contract/fields/Opportunity_Description__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Description__c</fullName>
    <label>Opportunity Description</label>
    <type>TextArea</type>
</CustomField>