force-app/main/default/objects/Contract/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>IO</relationshipLabel>
    <relationshipName>IO</relationshipName>
    <type>Lookup</type>
</CustomField>