force-app/main/default/objects/Contract/fields/Sales_Persons_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Persons_Email__c</fullName>
    <label>Sales Persons Email</label>
    <type>Email</type>
</CustomField>