force-app/main/default/objects/Contract/fields/Signers_Email__c.field-meta.xml
<CustomField>
    <fullName>Signers_Email__c</fullName>
    <formula>Opportunity__r.Signers_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signer’s Email</label>
    <type>Text</type>
</CustomField>