force-app/main/default/objects/Contract/fields/Subclient_Name__c.field-meta.xml
<CustomField>
    <fullName>Subclient_Name__c</fullName>
    <formula>Opportunity__r.SubClient_or_Manufacturer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subclient Name</label>
    <type>Text</type>
</CustomField>