force-app/main/default/objects/Contract/fields/Total_Invoice_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Price__c</fullName>
    <label>IO Grand Total</label>
    <summarizedField>Invoice__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Invoice__c.IO__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>